--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,6 +11,11 @@
     <string name="medium">Media</string>
     <string name="high">Alta</string>
     <string name="set_due_date">Establecer fecha de vencimiento</string>
+    <string name="set_date">Establecer Fecha</string>
+    <string name="set_time">Establecer Hora</string>
+    <string name="due_date">Vence: %1$s</string>
+    <string name="add_attachment">Añadir Archivo</string>
+    <string name="remove_attachment">Quitar archivo</string>
     <string name="save">Guardar</string>
     <string name="cancel">Cancelar</string>
 </resources>
