--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,7 +15,12 @@
     <string name="set_time">Establecer Hora</string>
     <string name="due_date">Vence: %1$s</string>
     <string name="add_attachment">Añadir Archivo</string>
+    <string name="add_audio">Añadir Audio</string>
     <string name="remove_attachment">Quitar archivo</string>
     <string name="save">Guardar</string>
     <string name="cancel">Cancelar</string>
+    <string name="channel_name">Recordatorios de Tareas</string>
+    <string name="channel_description">Notificaciones para recordatorios de tareas</string>
+    <string name="task_reminder">Recordatorio de Tarea</string>
+    <string name="task_due_notification">Una tarea está pendiente.</string>
 </resources>
