--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,26 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Notas</string>
     <string name="search">Buscar</string>
+    <string name="search_notes">Buscar notas</string>
     <string name="new_note_task">Nueva nota/tarea</string>
     <string name="title">Título</string>
     <string name="description">Descripción</string>
-    <string name="is_task">Es tarea</string>
+    <string name="note">Nota</string>
+    <string name="task">Tarea</string>
     <string name="completed">Completada</string>
     <string name="priority">Prioridad</string>
     <string name="low">Baja</string>
     <string name="medium">Media</string>
     <string name="high">Alta</string>
+    <string name="due_date_time">Fecha y hora de vencimiento</string>
     <string name="set_due_date">Establecer fecha de vencimiento</string>
     <string name="set_date">Establecer Fecha</string>
     <string name="set_time">Establecer Hora</string>
     <string name="due_date">Vence: %1$s</string>
-    <string name="add_attachment">Añadir Archivo</string>
+    <string name="add_image">Añadir Imagen</string>
     <string name="add_audio">Añadir Audio</string>
+    <string name="attachments">Adjuntos</string>
     <string name="remove_attachment">Quitar archivo</string>
     <string name="save">Guardar</string>
     <string name="cancel">Cancelar</string>
+    <string name="delete">Eliminar</string>
+    <string name="delete_note_title">Eliminar Nota</string>
+    <string name="delete_note_confirmation">¿Estás seguro de que quieres eliminar esta nota? Esta acción no se puede deshacer.</string>
     <string name="channel_name">Recordatorios de Tareas</string>
     <string name="channel_description">Notificaciones para recordatorios de tareas</string>
     <string name="task_reminder">Recordatorio de Tarea</string>
     <string name="task_due_notification">Una tarea está pendiente.</string>
+    <string name="all">Todo</string>
+    <string name="notes">Notas</string>
+    <string name="tasks">Tareas</string>
+    <string name="empty_list_message">¡Aún no hay notas!\nToca el botón + para crear una.</string>
 </resources>
