--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Notes</string>
     <string name="search">Search</string>
+    <string name="search_notes">Search notes</string>
     <string name="new_note_task">New note/task</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
-    <string name="is_task">Is task</string>
+    <string name="note">Note</string>
+    <string name="task">Task</string>
     <string name="completed">Completed</string>
     <string name="priority">Priority</string>
     <string name="low">Low</string>
     <string name="medium">Medium</string>
     <string name="high">High</string>
+    <string name="due_date_time">Due date &amp; time</string>
     <string name="set_due_date">Set due date</string>
     <string name="set_date">Set Date</string>
     <string name="set_time">Set Time</string>
     <string name="due_date">Due: %1$s</string>
-    <string name="add_attachment">Add Attachment</string>
+    <string name="add_image">Add Image</string>
     <string name="add_audio">Add Audio</string>
+    <string name="attachments">Attachments</string>
     <string name="remove_attachment">Remove attachment</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="delete_note_title">Delete Note</string>
+    <string name="delete_note_confirmation">Are you sure you want to delete this note? This action cannot be undone.</string>
     <string name="channel_name">Task Reminders</string>
     <string name="channel_description">Notifications for task reminders</string>
     <string name="task_reminder">Task Reminder</string>
     <string name="task_due_notification">A task is due.</string>
+    <string name="all">All</string>
+    <string name="notes">Notes</string>
+    <string name="tasks">Tasks</string>
+    <string name="empty_list_message">No notes yet!\nTap the + button to create one.</string>
 </resources>
