Mejoras en el diseño

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,4 +35,11 @@
     <string name="notes">Notas</string>
     <string name="tasks">Tareas</string>
     <string name="empty_list_message">¡Aún no hay notas!\nToca el botón + para crear una.</string>
+    <string name="start_recording">Empezar a grabar</string>
+    <string name="stop_recording">Dejar de grabar</string>
+    <string name="select_date">Seleccionar fecha</string>
+    <string name="select_time">Seleccionar hora</string>
+    <string name="clear_date">Borrar fecha</string>
+    <string name="record_audio">Grabar audio</string>
+
 </resources>
