--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,19 @@
     <string name="notes">Notes</string>
     <string name="tasks">Tasks</string>
     <string name="empty_list_message">No notes yet!\nTap the + button to create one.</string>
+    <string name="start_recording">Start recording</string>
+    <string name="stop_recording">Stop recording</string>
+    <string name="select_date">Select date</string>
+    <string name="select_time">Select time</string>
+    <string name="clear_date">Clear date</string>
+    <string name="record_audio">Record audio</string>
+    <string name="attachment_image">Attachment image</string>
+    <string name="image">Image</string>
+    <string name="voice_message">Voice message</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="choose_image_source">Choose image source</string>
+    <string name="capture_photo">Capture photo</string>
+    <string name="select_from_gallery">Select from gallery</string>
+
 </resources>
