--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="choose_image_source">Choose image source</string>
     <string name="capture_photo">Capture photo</string>
     <string name="select_from_gallery">Select from gallery</string>
+    <string name="no_notes_found">No notes found</string>
 
 </resources>
