--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,12 +43,14 @@
     <string name="record_audio">Record audio</string>
     <string name="attachment_image">Attachment image</string>
     <string name="image">Image</string>
+    <string name="attachment_audio_label">Audio</string>
+    <string name="attachment_file_label">File</string>
     <string name="voice_message">Voice message</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="choose_image_source">Choose image source</string>
     <string name="capture_photo">Capture photo</string>
     <string name="select_from_gallery">Select from gallery</string>
-    <string name="no_notes_found">No notes found</string>
+    <string name="no_notes_found">No matching notes found</string>
 
 </resources>
