1.Soporte para Videos: Se añade la funcionalidad para adjuntar, visualizar y eliminar archivos de video en las notas, completando así las capacidades multimedia de la aplicación.2.Permiso de Alarmas Exactas: Se implementa un diálogo que guía al usuario para conceder el permiso SCHEDULE_EXACT_ALARM, necesario para los recordatorios de tareas. Esto mejora la experiencia de usuario al evitar fallos silenciosos y explicar la necesidad del permiso.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,11 +13,11 @@
     <string name="low">Baja</string>
     <string name="medium">Media</string>
     <string name="high">Alta</string>
-    <string name="due_date_time">Fecha y hora de vencimiento</string>
-    <string name="set_due_date">Establecer fecha de vencimiento</string>
+    <string name="due_date_time">Recordatorio</string>
+    <string name="set_due_date">Establecer recordatorio</string>
     <string name="set_date">Establecer Fecha</string>
     <string name="set_time">Establecer Hora</string>
-    <string name="due_date">Vence: %1$s</string>
+    <string name="due_date">Recordatorio: %1$s</string>
     <string name="add_image">Añadir Imagen</string>
     <string name="add_audio">Añadir Audio</string>
     <string name="add_video">Añadir Video</string>
